test/compilable/must_use_assign.d
import core.attribute;

@mustUse struct S {}

void test()
{
    S a, b;
    a = b;
}
